Needed reference to template

--- a/www/src/pages/post-groups/show.html
+++ b/www/src/pages/post-groups/show.html
@@ -1,4 +1,6 @@
 <template>
+    <require from="../../resources/templates/paged-content"></require>
+
     <page-header if.bind="postGroup.title" title.bind="postGroup.title" image.bind="postGroup.media.url"></page-header>
 
     <page-body>
