Added postGroup postGroups functionality. Pagination all set

--- a/www/src/pages/post-groups/show.html
+++ b/www/src/pages/post-groups/show.html
@@ -9,7 +9,7 @@
                        limit-per-page.bind="5"
                        current-page-index.bind="pagedContentMemory.pagedIndex"
                        sort-by.bind="'date'"
-                       sort-direction.bind="'descending'">
+                       sort-direction.bind="'descending'" if.bind="postGroup.postGroups.length == 0">
             <template replace-part="paged-content-list-item">
                 <div click.trigger="navigationService.go(item)">
                     <arrow-card>
@@ -20,5 +20,25 @@
                 </div>
             </template>
         </paged-content>
+
+        <div if.bind="postGroup.postGroups.length > 0">
+            <div innerHTML.bind="postGroup.postGroupsContent | markdown"></div>
+            <div class="associated-postGroups-container">
+                <h3 class="associated-groups-title">Associated Groups</h3>
+                <div class="associated-postGroups-list">
+                    <card repeat.for="pg of postGroup.postGroups">
+                        <card-header title.bind="pg.title"></card-header>
+                        <share-link if.bind="pg.lastPost.sharingInfo" sharing-info.bind="pg.lastPost.sharingInfo"></share-link>
+                        <image-embed if.bind="pg.media.url" source.bind="pg.media.url" full-width="true"></image-embed>
+                        <div innerHTML.bind="pg.lastPost.summary | markdown" if.bind="pg.lastPost" class="home-postGroup-summary"></div>
+
+                        <card-links>
+                            <a click.delegate="navigationService.go(pg.lastPost)">Latest</a>
+                            <a click.delegate="navigationService.go(pg)" if.bind="!pg.hasOnePost()">See All</a>
+                        </card-links>
+                    </card>
+                </div>
+            </div>
+        </div>
     </page-body>
 </template>
