--- a/www/src/pages/home.html
+++ b/www/src/pages/home.html
@@ -35,7 +35,8 @@
         <card-header title.bind="postGroup.title"></card-header>
         <share-link if.bind="postGroup.lastPost.sharingInfo" sharing-info.bind="postGroup.lastPost.sharingInfo"></share-link>
         <image-embed if.bind="postGroup.media.url" source.bind="postGroup.media.url" full-width="true"></image-embed>
-        <div innerHTML.bind="postGroup.lastPost.summary | markdown" class="home-postGroup-summary"></div>
+        <div innerHTML.bind="postGroup.lastPost.summary | markdown" if.bind="postGroup.lastPost" class="home-postGroup-summary"></div>
+        <div innerHTML.bind="postGroup.postGroupsSummary | markdown" if.bind="!postGroup.lastPost && postGroup.postGroups.length > 0" class="home-postGroup-summary"></div>
 
         <card-links>
             <a click.delegate="navigationService.go(postGroup.lastPost)">Latest</a>
