--- a/www/src/pages/home.html
+++ b/www/src/pages/home.html
@@ -31,18 +31,15 @@
     </card>
 
     <!-- POST GROUPS -->
-    <card repeat.for="postGroup of feed.postGroups" if.bind="postGroup.showOnHomeFeed">
-        <card-header title.bind="postGroup.title"></card-header>
-        <share-link if.bind="postGroup.lastPost.sharingInfo" sharing-info.bind="postGroup.lastPost.sharingInfo"></share-link>
-        <image-embed if.bind="postGroup.media.url" source.bind="postGroup.media.url" full-width="true"></image-embed>
-        <div innerHTML.bind="postGroup.lastPost.summary | markdown" if.bind="postGroup.lastPost" class="home-postGroup-summary"></div>
-        <div innerHTML.bind="postGroup.postGroupsSummary | markdown" if.bind="!postGroup.lastPost && postGroup.postGroups.length > 0" class="home-postGroup-summary"></div>
-
-        <card-links>
-            <a click.delegate="navigationService.go(postGroup.lastPost)" if.bind="postGroup.postGroups.length === 0">Latest</a>
-            <a click.delegate="navigationService.go(postGroup)" if.bind="!postGroup.hasOnePost()">See All</a>
-        </card-links>
-    </card>
+    <a click.delegate="navigationService.getPostGroupDestination(postGroup)" repeat.for="postGroup of feed.postGroups" if.bind="postGroup.showOnHomeFeed" class="card-wrap">
+        <card>
+            <card-header title.bind="postGroup.title"></card-header>
+            <share-link if.bind="postGroup.lastPost.sharingInfo" sharing-info.bind="postGroup.lastPost.sharingInfo"></share-link>
+            <image-embed if.bind="postGroup.media.url" source.bind="postGroup.media.url" full-width="true"></image-embed>
+            <div innerHTML.bind="postGroup.lastPost.summary | markdown" if.bind="postGroup.lastPost" class="home-postGroup-summary"></div>
+            <div innerHTML.bind="postGroup.postGroupsSummary | markdown" if.bind="!postGroup.lastPost && postGroup.postGroups.length > 0" class="home-postGroup-summary"></div>
+        </card>
+    </a>
 
     <!-- PRAYER TIME -->
     <card if.bind="feed.hasPrayerRequests">
