Added in filtering that interacts with the pagination piece. Also added in pieces for handling extra bits of information to show up on the Post. Had to remove the route memory for pagination and filtering. The way it's currently implemented I realized too late that it wasn't going to work nicely without a solid plan and 14 hours in straight, I have no solid plans. If they throw up a huge stink we can prob jerry rig it in really quick.

--- a/www/src/pages/post-groups/show.html
+++ b/www/src/pages/post-groups/show.html
@@ -1,11 +1,20 @@
 <template>
     <require from="../../resources/templates/paged-content/paged-content"></require>
+    <require from="../../resources/templates/filter-content/filter-content"></require>
 
     <page-header if.bind="postGroup.title" title.bind="postGroup.title" image.bind="postGroup.media.url"></page-header>
 
     <page-body>
+        <filter-content
+            extra-fields.bind="postGroup.rssMetadata"
+            data.bind="postGroup"
+            filtered-posts.bind="filteredPosts"
+            if.bind="postGroup.postGroups.length == 0"
+        >
+        </filter-content>
+
         <paged-content class="post-group-paged-content"
-                       content.bind="postGroup.publishedPosts"
+                       content.bind="filteredPosts"
                        limit-per-page.bind="5"
                        current-page-index.bind="pagedContentMemory.pagedIndex"
                        sort-by.bind="'date'"
