Configure to look like churchconnect.

--- a/www/src/app.html
+++ b/www/src/app.html
@@ -22,7 +22,7 @@
                                 </a>
                             </div>
 
-                            <div class="center sliding">TRBC</div>
+                            <div class="center sliding">ChurchConnect</div>
 
                             <div class="right">
 
