--- a/www/src/pages/home.html
+++ b/www/src/pages/home.html
@@ -4,8 +4,7 @@
         autoplay="5000"
         show-controls="true">
         <slide
-            repeat.for="bannerImage of feed.bannerImages"
-            aspect-ratio=".5625">
+            repeat.for="bannerImage of feed.bannerImages">
             <img
                 src.bind="bannerImage.image.url"
                 click.delegate="navigationService.go(bannerImage.link)">
