Updated the filter-out-past-items-value-converter to use moment and handles time zones way better. Updated the defaults bind to take in a a more sane key pattern and it uppercases the words no problem.

--- a/www/src/pages/events/list.html
+++ b/www/src/pages/events/list.html
@@ -7,7 +7,7 @@
 
         <filter-content
             extra-fields.bind="[]"
-            defaults.bind="[ 'All Events', 'This Week' ]"
+            defaults.bind="[ 'all_events', 'this_week' ]"
             default-events-filter.bind="defaultEventsFilter"
             data.bind="events"
             type.bind="'events'"
