Added aspect ratio back in. Forgot contentful restricts the sizes. Added line-height: 0; for images so it confirms to image height

--- a/www/src/pages/home.html
+++ b/www/src/pages/home.html
@@ -4,7 +4,8 @@
         autoplay="5000"
         show-controls="true">
         <slide
-            repeat.for="bannerImage of feed.bannerImages">
+            repeat.for="bannerImage of feed.bannerImages"
+            aspect-ratio=".5625">
             <img
                 src.bind="bannerImage.image.url"
                 click.delegate="navigationService.go(bannerImage.link)">
