Changed week to isoWeek (Monday - Sunday). For some reason the link fix didnt upload.

--- a/www/src/pages/home.html
+++ b/www/src/pages/home.html
@@ -94,10 +94,10 @@
                     <a click.delegate="navigationService.go(song.amazonLink.url)" if.bind="song.amazonLink" class="icon-link">
                         <item-icon icon="amazon"></item-icon>
                     </a>
-                    <a click.delegate="navigationService.go(song.itunesLink.url)" if.bind="song.itunesLink" class="icon-link">
+                    <a click.delegate="navigationService.go(song.iTunesLink.url)" if.bind="song.iTunesLink" class="icon-link">
                         <item-icon icon="music"></item-icon>
                     </a>
-                    <a click.delegate="navigationService.go(song.youtubeLink.url)" if.bind="song.youtubeLink" class="icon-link">
+                    <a click.delegate="navigationService.go(song.youTubeLink.url)" if.bind="song.youTubeLink" class="icon-link">
                         <item-icon icon="youtube"></item-icon>
                     </a>
                 </div>
