Add settings model and reflect the changes across the app. Move the feed call into App so we can access the settings easier from the feed on the app level.

--- a/www/src/app.html
+++ b/www/src/app.html
@@ -22,7 +22,7 @@
                                 </a>
                             </div>
 
-                            <div class="center sliding">ChurchConnect</div>
+                            <div class="center sliding">${feed.settings.appName}</div>
 
                             <div class="right">
 
