--- a/www/src/pages/prayer-requests/list.html
+++ b/www/src/pages/prayer-requests/list.html
@@ -1,7 +1,7 @@
 <template>
     <require from="resources/templates/paged-content/paged-content"></require>
 
-    <page-header title="Prayer Time" image.bind="prayerTimeImageURL"></page-header>
+    <page-header title="Prayer Time" image.bind="app.feed.settings.prayerTimeBanner.url"></page-header>
 
     <page-body>
         <!--TODO: do the click method binding the right way -->
