--- a/www/src/pages/prayer-requests/show.html
+++ b/www/src/pages/prayer-requests/show.html
@@ -1,5 +1,5 @@
 <template>
-    <page-header title="Prayer Time" image.bind="prayerTimeImageURL"></page-header>
+    <page-header title="Prayer Time" image.bind="app.feed.settings.prayerTimeBanner.url"></page-header>
 
     <page-body>
         <card if.bind="prayerRequest.title">
