--- a/www/src/pages/events/list.html
+++ b/www/src/pages/events/list.html
@@ -1,7 +1,7 @@
 <template>
     <require from="../../resources/templates/filter-content/filter-content"></require>
 
-    <page-header title="Events" image.bind="eventsImageURL"></page-header>
+    <page-header title="Events" image.bind="app.feed.settings.eventBanner.url"></page-header>
 
     <page-body>
 
